# SeidelPolygonTriangulation

./: CMakeLists.txt  README.md  data_1  main.cpp
OriginalCodeC/: misc.c  tri.c  triangulate
include/: Monotonate.h  Point.h  Polygon.h  Query.h  Segment.h  Trapezoid.h  Triangulation.h
src/: Monotonate.cpp  Point.cpp  Polygon.cpp  Query.cpp  Segment.cpp  Trapezoid.cpp  Triangulation.cpp
